[package]
name = "sicql-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror = "1.0.37"
clap = { version = "4.0.23", features = ["derive"] }
sicql = { path = "lib" }

[dev-dependencies]
anyhow = "1.0.66"

[workspace]
members = ["lib"]

[workspace.package]
authors = ["sic!kh <kirill.lukashev.sic@gmail.com>"]
edition = "2021"
repository = "https://github.com/sicikh/sicql"
license = "MIT"